# rust-aws-lambda-dynamodb

./: .gitignore  Cargo.toml  README.md
src/: main.rs
